adding java.util open to common.sh